--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "Kartik Malik"
   ],
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "axios": "^0.19.0",
+    "@reach/router": "^1.3.4",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby": "^2.24.66",
+    "gatsby-image": "^2.4.20",
+    "gatsby-plugin-manifest": "^2.4.32",
+    "gatsby-plugin-offline": "^3.2.29",
+    "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-react-svg": "^2.1.2",
-    "gatsby-plugin-sass": "^2.1.9",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby-plugin-sass": "^2.3.14",
+    "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-source-filesystem": "^2.3.31",
+    "gatsby-transformer-sharp": "^2.5.16",
     "jwt-decode": "^2.2.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^6.1.0"
   },
   "keywords": [
     "fitness",
@@ -36,12 +36,14 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "2.1.2"
   },
   "repository": {
     "type": "git",
